--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Rory Maver Davis's homepage
+title: Rory Maver Davis's Website
 description: I'm hungry for worksheet marks
